[package]
name = "offline-election-tool"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
frame-support = "45.0.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpsee-core = "0.26.0"
jsonrpsee-ws-client = "0.26.0"
pallet-staking = "45.0.0"
parity-scale-codec = "3.7.5"
sp-core = "39.0.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
sp-npos-elections = "40.0.0"
sp-runtime = "45.0.0"
clap = { version = "4.5.50", features = ["derive"] }
async-trait = "0.1.89"
mockall = "0.13.1"
sp-version = "43.0.0"
axum = { version = "0.8.6", features = ["json", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.2", features = ["trace"] }
futures = "0.3.31"
subxt = { version = "0.44.0", features = ["reconnecting-rpc-client"] }
pallet-election-provider-multi-block = "0.6.0"
frame-election-provider-support = "45.0.0"
axum-test = "18.2.1"

[profile.dev]
incremental = true

[profile.test]
opt-level = 0
debug = true
lto = false
codegen-units = 1
incremental = false

[patch.crates-io]
frame-support = {path = "../polkadot-sdk/substrate/frame/support"}
pallet-election-provider-multi-block = {path = "../polkadot-sdk/substrate/frame/election-provider-multi-block"}
pallet-staking = {path = "../polkadot-sdk/substrate/frame/staking"}
frame-election-provider-support = {path = "../polkadot-sdk/substrate/frame/election-provider-support"}
sp-core = {path = "../polkadot-sdk/substrate/primitives/core"}
sp-npos-elections = {path = "../polkadot-sdk/substrate/primitives/npos-elections"}
sp-runtime = {path = "../polkadot-sdk/substrate/primitives/runtime"}
sp-version = {path = "../polkadot-sdk/substrate/primitives/version"}
